[package]
authors = ['GMPC authors <contact@gm-pc.com>']
edition = '2018'
name = 'gmpc'
version = '0.1.0'

[workspace]
members = [
    "cli",
    "component/primitives",
    "component/consensus/gbft",
    "component/consensus/pow",
    "component/consensus/poa",
    "component/network",
    "component/runtime",
    "component/wasm"
]

[profile.release]
panic = "unwind"
keccak-hash = "0.4.0"

[[bin]]
name = 'gmpc'
path = 'src/main.rs'
