[package]
name = "gmpc_cli"
version = "0.1.0"
authors = ["rickeywon <rickeywon@163.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'


[[bin]]

name = 'gmpc_cli'
path = 'src/main.rs'


[build-dependencies]
vergen = '3'
