[package]
name = "network"
version = "0.1.0"
authors = ["rickeywon <rickeywon@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libp2p = "0.11.0"
serde = { version = "1.0.101", features = ["derive"] }
slog_derive = "0.2.0"
serde_json = "1.0.41"
erased-serde = "0.3.9"
slog = { version = "2.5.2", features = ["nested-values"] }
futures = "0.1.21"
bytes = "0.4"
serde_json = "1.0"
tokio = "0.1"