[package]
name = "network"
version = "0.1.0"
authors = ["yulingv <yulingv@163.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.0"
bytes = "0.5.0"
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
derive_more = "0.99.2"
either = "1.5.3"
erased-serde = "0.3.9"
fnv = "1.0.6"
futures = "0.3.4"
futures_codec = "0.3.3"
futures-timer = "3.0.1"
wasm-timer = "0.2"
linked-hash-map = "0.5.2"
linked_hash_set = "0.1.3"
log = "0.4.8"
lru = "0.4.0"
nohash-hasher = "0.2.0"
parking_lot = "0.10.0"
prost = "0.6.1"
rand = "0.7.2"
hex = "0.4.0"
pin-project = "0.4.6"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
slog = { version = "2.5.2", features = ["nested-values"] }
slog_derive = "0.2.0"
smallvec = "0.6.10"
thiserror = "1"
unsigned-varint = { version = "0.3.1", features = ["futures", "futures-codec"] }
void = "1.0.2"
zeroize = "1.0.0"

[dependencies.libp2p]
version = "0.18.1"
default-features = false
features = ["websocket", "kad", "mdns", "ping", "identify", "mplex", "yamux", "noise"]

[dev-dependencies]
async-std = "1.5"
assert_matches = "1.3"
env_logger = "0.7.0"
libp2p = { version = "0.18.1", default-features = false, features = ["secio"] }
quickcheck = "0.9.0"
rand = "0.7.2"
tempfile = "3.1.0"

[features]
default = []
