[package]
name = "nettool"
version = "0.1.0"
authors = ["yulingv <yulingv@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
futures-core = "0.3.4"
lazy_static = "1.4.0"
prometheus = "0.8.0"

[features]
default = ["metered"]
metered = []
