[package]
name = "gbft"
version = "0.1.0"
authors = ["rickeywon <rickeywon@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"